log
Fri Mar 18 14:36:06 UTC 2022: 
 list.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  0|6
total_score: 0/70
9ec9f75
Fri Mar 18 14:36:53 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
a72959e
Fri Mar 18 14:38:46 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
9ed5fe9
Fri Mar 18 14:48:55 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:39:19: error: implicit declaration of function ‘first’ [-Werror=implicit-function-declaration]
   list->current = first(list);
                   ^~~~~
list.c:39:17: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   list->current = first(list);
                 ^
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
bf78af9
Fri Mar 18 14:56:12 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
eb1fcff
Fri Mar 18 15:00:52 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
be8e528
Fri Mar 18 15:02:43 UTC 2022: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
4077457
